Attempting to change safe area on iOS and fix the boundary issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,11 +6,12 @@ body {
     background-image: url('./background.png');
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: #3a3a3a;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100% !important;
     max-width: 100vw !important;
+    margin: 0;
 }
 
 #logo {
@@ -24,7 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 40px;
+    margin: 40px 0;
     padding: 20px;
     border: 3px solid #cca664;
     border-radius: 20px;
@@ -34,7 +35,7 @@ body {
     font-size: 30px;
     text-align: center;
     margin-bottom: 20px;
-    color: blue;
+    color: green;
 }
 
 #countries, #inputField {
